--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
+set(CMAKE_C_CLANG_TIDY clang-tidy)
+
 add_executable(hw1_game src/hw1_game.c src/hw1.c)
 target_compile_options(hw1_game PUBLIC -g -Wall -Wextra -Wshadow -Wpedantic -Wdouble-promotion -Wformat=2 -Wundef -Werror)
 target_link_libraries(hw1_game PUBLIC m)
