--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ project(hw1 LANGUAGES C CXX)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
 
-set(CMAKE_C_CLANG_TIDY clang-tidy)
+# set(CMAKE_C_CLANG_TIDY clang-tidy)
 
 add_executable(hw1_game src/hw1_game.c src/hw1.c)
 target_compile_options(hw1_game PUBLIC -g -Wall -Wextra -Wshadow -Wpedantic -Wdouble-promotion -Wformat=2 -Wundef -Werror)
