--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Run Game",
             "program": "${workspaceRoot}/build/hw1_game",
-            "args": ["2", "----" "12211221"],
+            "args": ["2", "----", "12211221"],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build"
         },
@@ -15,7 +15,7 @@
             "request": "launch",
             "name": "Run Solver",
             "program": "${workspaceRoot}/build/hw1_solver",
-			"args": ["2", "----", "12211221"],
+			"args": ["6", "-------6--------------------------2-", "000514040040302050000000"],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "CMake: build"
         },
